[gd_scene load_steps=11 format=3 uid="uid://b4bvc1nfwdm4g"]

[ext_resource type="PackedScene" uid="uid://cbsmy8l7srlc1" path="res://scenes/game_object/enemy/enemy_Base.tscn" id="1_briyy"]
[ext_resource type="Script" uid="uid://cpwjigdy3peav" path="res://scenes/game_object/enemy/enemy_Mage/enemy_Mage.gd" id="2_uixk6"]
[ext_resource type="Shader" uid="uid://dd7xij77hfa8a" path="res://scenes/components/hit_flash/shader/hit_flash.gdshader" id="3_06fj0"]
[ext_resource type="PackedScene" uid="uid://dn567e2bat71b" path="res://scenes/enemy_skill/enemy_skill_LightningStrike/enemy_skill_LightningStrike.tscn" id="3_glphd"]
[ext_resource type="PackedScene" uid="uid://diyefkios6nos" path="res://scenes/components/animation_handler/animation_handler.tscn" id="3_vcj3g"]
[ext_resource type="PackedScene" uid="uid://cik3upi2rmml6" path="res://scenes/components/pulse_effect/pulse_effect.tscn" id="4_ree8f"]
[ext_resource type="Texture2D" uid="uid://66dw8oiexphf" path="res://scenes/game_object/enemy/enemy_Mage/sprites/STRANDED - Relic Guardian 3/Guardian Sprite Sheets/Relic Guardian 3 Sprite Sheet 95x65 - No Shadow.png" id="5_glphd"]
[ext_resource type="AnimationLibrary" uid="uid://bnbrprdgr5y1f" path="res://scenes/game_object/enemy/enemy_Mage/animation/enemy_mage_lib.tres" id="8_06fj0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7g67l"]
resource_local_to_scene = true
shader = ExtResource("3_06fj0")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_glphd"]
radius = 9.0

[node name="enemy_Mage" instance=ExtResource("1_briyy")]
script = ExtResource("2_uixk6")

[node name="look" parent="." index="3" node_paths=PackedStringArray("visual_node")]
is_base_sprite_looking_left = false
visual_node = NodePath("../visuals")

[node name="hit_flash" parent="." index="6" node_paths=PackedStringArray("sprite")]
hit_flash_material = SubResource("ShaderMaterial_7g67l")
sprite = NodePath("../visuals/sprite_2d")

[node name="attack_manager" parent="." index="7"]
ATTACK_RANGE = 200.0

[node name="enemy_skill_LightningStrike" parent="attack_manager" index="3" instance=ExtResource("3_glphd")]
explo_range = Vector2(5, 125)
explosion_delay_duration = 1.5
explosion_count = 6
cast_range = 200.0

[node name="collision_shape_2d" type="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_glphd")
debug_color = Color(0, 0.6, 0.69803923, 0.0627451)

[node name="collision_shape_2d" type="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_glphd")
debug_color = Color(0, 0.6, 0.7019608, 0.0627451)

[node name="sprite_2d" type="Sprite2D" parent="visuals" index="0"]
texture = ExtResource("5_glphd")
hframes = 4
region_rect = Rect2(0, 65, 380, 65)

[node name="pulse_effect" parent="." index="13" instance=ExtResource("4_ree8f")]

[node name="animation_handler" parent="." index="14" node_paths=PackedStringArray("anim_player") instance=ExtResource("3_vcj3g")]
anim_player = NodePath("../animation_player")

[node name="animation_player" type="AnimationPlayer" parent="." index="15"]
root_node = NodePath("../animation_handler")
libraries = {
&"enemy_mage_lib": ExtResource("8_06fj0")
}
